fix(Atoms/Toast Container): Fix alignment & remove padding

--- a/packages/core/src/components/atoms/toast-container/toast-container.component.scss
+++ b/packages/core/src/components/atoms/toast-container/toast-container.component.scss
@@ -2,29 +2,24 @@
     @apply fixed w-full flex flex-col gap-4 z-toast;
     @apply max-w-full tablet:max-w-[26.5rem];
     @apply z-[600];
-
-    padding-top: calc(env(safe-area-inset-top, 0) + 1rem);
-    padding-right: calc(env(safe-area-inset-right, 0) + 1rem);
-    padding-bottom: calc(env(safe-area-inset-bottom, 0) + 1rem);
-    padding-left: calc(env(safe-area-inset-left, 0) + 1rem);
 }
 
 :host(.placement-top-start) {
     top: calc(env(safe-area-inset-top, 0) + 1rem);
-    right: calc(env(safe-area-inset-right, 0) + 1rem);
+    left: calc(env(safe-area-inset-left, 0) + 1rem);
 }
 
 :host(.placement-top-end) {
     top: calc(env(safe-area-inset-top, 0) + 1rem);
-    left: calc(env(safe-area-inset-left, 0) + 1rem);
+    right: calc(env(safe-area-inset-right, 0) + 1rem);
 }
 
 :host(.placement-bottom-start) {
     bottom: calc(env(safe-area-inset-bottom, 0) + 1rem);
-    right: calc(env(safe-area-inset-right, 0) + 1rem);
+    left: calc(env(safe-area-inset-left, 0) + 1rem);
 }
 
 :host(.placement-bottom-end) {
     bottom: calc(env(safe-area-inset-bottom, 0) + 1rem);
-    left: calc(env(safe-area-inset-left, 0) + 1rem);
+    right: calc(env(safe-area-inset-right, 0) + 1rem);
 }
